snapshot-tests/tests/snapshots/parser__newline_string.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[unterminated-string]: 
  ┌─ newline_string:1:6
  │
1 │ a = "
  │      ^ expected `"`
